docs/user/1.2/_sources/cli/apptainer_push.rst.txt
.. _apptainer_push:

apptainer push
--------------

Upload image to the provided URI

Synopsis
~~~~~~~~



  The 'push' command allows you to upload a SIF container to a given
  URI.  Supported URIs include:

  library:
      library://user/collection/container[:tag]

  oras:
      oras://registry/namespace/image:tag


  NOTE: It's always good practice to sign your containers before
  pushing them to the library. An auth token is required to push to the library,
  so you may need to configure it first with 'apptainer remote'.

::

  apptainer push [push options...] <image> <URI>

Examples
~~~~~~~~

::


    To Library
    $ apptainer push /home/user/my.sif library://user/collection/my.sif:latest

    To supported OCI registry
    $ apptainer push /home/user/my.sif oras://registry/namespace/image:tag

Options
~~~~~~~

::

  -U, --allow-unsigned       do not require a signed container image
  -D, --description string   description for container image (library:// only)
      --docker-host string   specify a custom Docker daemon host
  -h, --help                 help for push
      --library string       the library to push to
      --no-https             use http instead of https for docker:// oras:// and library://<hostname>/... URIs

SEE ALSO
~~~~~~~~

* :ref:`apptainer <apptainer>` 	 - 
Linux container platform optimized for High Performance Computing (HPC) and
Enterprise Performance Computing (EPC)

*Auto generated by spf13/cobra on 11-Oct-2023*
